--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
