--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bootstrap": "^3.4.1",
+    "nanoid": "^5.1.5",
+    "pinia": "^3.0.3",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
