--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bootstrap": "^3.4.1",
+    "mitt": "^3.0.1",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
     "vite-plugin-vue-setup-extend": "^0.4.0",
